# lightspeed-stack

./: .coderabbit.yaml  .gitignore  CLAUDE.md  CONTRIBUTING.md  Containerfile  Makefile  OWNERS  README.md  behave.ini  docker-compose.yaml  lightspeed-stack.yaml  pyproject.toml  run.yaml  test.containerfile
.github/workflows/: bandit.yaml  black.yaml  build.yaml  build_and_push_dev.yaml  build_and_push_release.yaml  build_pr.yaml  check_dependencies.yaml  e2e_tests.yaml  e2e_tests_rhaiis.yaml  e2e_tests_rhelai.yaml  integration_tests.yaml  mypy.yaml  outdated_dependencies.yaml  pydocstyle.yaml  pylint.yaml  pyright.yaml  ruff.yaml  unit_tests.yaml
.tekton/: lightspeed-stack-pull-request.yaml  lightspeed-stack-push.yaml
docs/: Gemfile  README.md  _config.yml  agent_context_preloading.md  auth.md  byok_guide.md  config.puml  deployment_guide.md  e2e_scenarios.md  getting_started.md  index.md  installation_linux.md  installation_macos.md  openapi.json  openapi.md  output.md  providers.md  query_endpoint.puml  rag_guide.md  rest_api.uml  streaming_query_endpoint.puml  testing.md  user_data_collection.md
docs/demos/lcore/: lcore.html  lcore.md
examples/: gemini-run.yaml  lightspeed-stack-byok-rag.yaml  lightspeed-stack-conversation-cache-pg.yaml  lightspeed-stack-conversation-cache-sqlite.yaml  lightspeed-stack-lls-external.yaml  lightspeed-stack-lls-library.yaml  lightspeed-stack-mcp-servers.yaml  lightspeed-stack-quota-limiter-pg.yaml  lightspeed-stack-quota-limiter-sqlite.yaml  openai-faiss-run.yaml  openai-pgvector-run.yaml  pyproject.llamastack.toml  quota-limiter-configuration-pg.yaml  quota-limiter-configuration-sqlite.yaml  run.yaml  vertexai-run.yaml  vllm-granite-run.yaml  vllm-llama-faiss-run.yaml  vllm-qwen3-run.yaml
scripts/: fix_openapi_doc.py  gen_doc.py  generate_openapi_schema.py  query_llm.py
src/: README.md  __init__.py  client.py  configuration.py  constants.py  lightspeed-stack.py  lightspeed_stack.py  llama_stack_configuration.py  log.py  version.py
src/app/: README.md  database.py  diagnostic_app.py  main.py  routers.py  state.py
src/app/endpoints/: README.md  __init__.py  authorized.py  config.py  conversations.py  conversations_v2.py  feedback.py  health.py  info.py  metrics.py  models.py  providers.py  query.py  query_v2.py  root.py  shields.py  streaming_query.py  tools.py
src/auth/: README.md  __init__.py  interface.py  jwk_token.py  k8s.py  noop.py  noop_with_token.py
src/authentication/: README.md  __init__.py  jwk_token.py  k8s.py  noop.py  noop_with_token.py  utils.py
src/authorization/: README.md  __init__.py  middleware.py  resolvers.py
src/cache/: README.md  cache.py  cache_factory.py  in_memory_cache.py  noop_cache.py  postgres_cache.py  sqlite_cache.py
src/metrics/: README.md  __init__.py  utils.py
src/models/: README.md  cache_entry.py  classes.txt  config.py  requests.py  response_classes  responses.py
src/models/database/: README.md  __init__.py  base.py  conversations.py
src/quota/: README.md  __init__.py  cluster_quota_limiter.py  connect_pg.py  connect_sqlite.py  quota_exceed_error.py  quota_limiter.py  quota_limiter_factory.py  revokable_quota_limiter.py  sql.py  user_quota_limiter.py
src/runners/: README.md  __init__.py  data_collector.py  quota_scheduler.py  uvicorn.py
src/services/: data_collector.py
src/utils/: README.md  __init__.py  auth.py  checks.py  common.py  connection_decorator.py  context_preloader.py  endpoints.py  llama_stack_version.py  mcp_headers.py  quota.py  suid.py  token_counter.py  tool_formatter.py  transcripts.py  types.py
tests/configuration/: lightspeed-stack-proper-name.yaml  lightspeed-stack.yaml  minimal-stack.yaml  multiline_system_prompt.txt  run.yaml  system_prompt.txt
tests/e2e/: README.md  __init__.py  gen_scenario_list.py  test_api.py  test_list.txt
tests/e2e-prow/rhoai/: pipeline-services.sh  pipeline-test-pod.sh  pipeline-vllm.sh  pipeline.sh  run-tests.sh
tests/e2e/configs/: README.md  run-azure.yaml  run-ci.yaml  run-rhaiis.yaml  run-rhelai.yaml
tests/e2e/configuration/: README.md  lightspeed-stack-auth-noop-token.yaml  lightspeed-stack-invalid-feedback-storage.yaml
tests/e2e/features/: README.md  authorized.feature  authorized_noop.feature  authorized_noop_token.feature  conversations.feature  environment.py  feedback.feature  health.feature  info.feature  llm_interface.feature  query.feature  rest_api.feature  smoketests.feature  streaming_query.feature
tests/e2e/utils/: README.md  utils.py
tests/integration/: README.md  conftest.py  test_configuration.py  test_openapi_json.py  test_version.py
tests/integration/endpoints/: README.md  __init__.py  test_config_integration.py  test_health_integration.py  test_info_integration.py
tests/profiles/test/: profile.py
tests/profiles/test_three/: profile.py
tests/profiles/test_two/: test.txt
tests/unit/: README.md  __init__.py  conftest.py  test_client.py  test_configuration.py  test_configuration_unknown_fields.py  test_lightspeed_stack.py  test_llama_stack_configuration.py  test_log.py
tests/unit/app/: README.md  test_database.py  test_diagnostic_app.py  test_main.py  test_routers.py  test_state.py
tests/unit/auth/: __init__.py  test_auth.py  test_jwk_token.py  test_k8s.py  test_noop.py  test_noop_with_token.py  test_utils.py
tests/unit/authentication/: README.md  test_auth.py  test_jwk_token.py  test_k8s.py  test_noop.py  test_noop_with_token.py  test_utils.py
tests/unit/authorization/: README.md  __init__.py  test_middleware.py  test_resolvers.py
tests/unit/cache/: README.md  test_cache_factory.py  test_noop_cache.py  test_postgres_cache.py  test_sqlite_cache.py
tests/unit/metrics/: README.md  __init__.py  test_utis.py
tests/unit/models/: README.md  test_config.py  test_requests.py  test_responses.py
tests/unit/quota/: README.md  test_cluster_quota_limiter.py  test_connect_pg.py  test_connect_sqlite.py  test_quota_exceed_error.py  test_quota_limiter_factory.py  test_user_quota_limiter.py
tests/unit/runners/: README.md  test_data_collector_runner.py  test_uvicorn_runner.py
(+90 files in other folders)
