[project]
name = "lightspeed-stack"
dynamic = ["version"]
description = "LLM tooling stack"
authors = []
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.3",
    "kubernetes>=30.1.0",
    "llama-stack==0.2.16",
    "llama-stack-client==0.2.16",
    "rich>=14.0.0",
    "cachetools>=6.1.0",
    "prometheus-client>=0.22.1",
    "starlette>=0.47.1",
    "aiohttp>=3.12.14",
    "authlib>=1.6.0",
]

[tool.pyright]
exclude = [
  # TODO(lucasagomes): This module was copied from road-core
  # service/ols/src/auth/k8s.py and currently has 58 Pyright issues. It
  # might need to be rewritten down the line.
  "src/auth/k8s.py",
]
extraPaths = ["./src"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/version.py"

[project.urls]
Homepage = "https://github.com/lightspeed-core/lightspeed-stack"
Issues = "https://github.com/lightspeed-core/lightspeed-stack/issues"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.0.0",
    "pyright>=1.1.401",
    "pylint>=3.3.7",
    "pydocstyle>=6.3.0",
    "mypy>=1.16.0",
    "types-PyYAML>=6.0.2",
    "types-requests>=2.28.0",
    "ruff>=0.11.13",
    "aiosqlite",
    "behave>=1.2.6",
    "types-cachetools>=6.1.0.20250717",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
build = [
    "build>=1.2.2.post1",
    "twine>=5.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    "src"
]
addopts = [
    "--import-mode=importlib",
]

[tool.pylint.main]
source-roots = "src"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pylint."MESSAGES CONTROL"]
disable = ["R0801"]
